Fix CSS Bugs on Iphone

--- a/assets/scss/components/_work-cards.scss
+++ b/assets/scss/components/_work-cards.scss
@@ -164,6 +164,9 @@
         padding: 10px;
         font-size: 10px;
         border-radius: 5px;
+        @media screen and (max-width:$mobile){
+          display: none;
+          }
       }
       &__date {
         position: absolute;
