--- a/assets/scss/components/_work-post.scss
+++ b/assets/scss/components/_work-post.scss
@@ -124,7 +124,7 @@
         line-height: 10px;
       }
     &__quote{
-        font-family: 'roboto';
+        font-family: 'Rubik';
         border-left: 5px solid var(--red);
         padding-left: 1em;
         // margin-bottom: 3em;
